Use new API in Aligner tool